fixing z-index for address information

--- a/main.scss
+++ b/main.scss
@@ -1338,7 +1338,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	top: 20px;
 	right: 0px;
 	text-align: right;
-	z-index:1;
+	z-index:3;
 	color: rgba(255,255,255,0.9);
 	line-height: 1.3;
 	font-size: 12px;
